# Goob

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: hw.goob
src/: interpreter.hpp  main.cpp  tokeniser.cpp  tokeniser.hpp
